--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,9 +29,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:allowBackup">
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_settings" />
+
         <service
             android:name=".JobService.ReminderCheckIntentService"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <activity android:name=".ForgotPassword" />
         <activity android:name=".SelectThemeActivity" />
@@ -66,8 +71,7 @@
         </receiver>
         <receiver android:name=".reminder.NotificationReceiver" />
         <receiver android:name=".reminder.NotifyDismissReceiver" />
-        <receiver
-            android:name=".JobService.QuarterChecker" />
+        <receiver android:name=".JobService.QuarterChecker" />
 
         <uses-library
             android:name="org.apache.http.legacy"
